@@ -73,16 +73,23 @@ public class Lattice {
 	//기분석 사전을 위한 lattice put
 	public void put(int beginIdx, int endIdx,
 			List<Pair<String, String>> fwdResultList) {
-		for(int i=0;i<fwdResultList.size();i++){
-			Pair<String,String> morphPosPair = fwdResultList.get(i);
-			if(i==0){
-				this.put(beginIdx, irrIdx-1, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
-			}else if(i==fwdResultList.size()-1){
-				this.put(irrIdx, endIdx, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
-			}else{
-				this.put(irrIdx, irrIdx-1, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
+
+		if(fwdResultList.size() == 1){
+			Pair<String,String> morphPosPair = fwdResultList.get(0);
+			this.put(beginIdx, endIdx, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
+		}
+		else{
+			for(int i=0;i<fwdResultList.size();i++){
+				Pair<String,String> morphPosPair = fwdResultList.get(i);
+				if(i==0){
+					this.put(beginIdx, irrIdx-1, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
+				}else if(i==fwdResultList.size()-1){
+					this.put(irrIdx, endIdx, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
+				}else{
+					this.put(irrIdx, irrIdx-1, morphPosPair.getFirst(), morphPosPair.getSecond(), this.posTable.getId(morphPosPair.getSecond()), 0.0);
+				}
+				irrIdx--;
 			}
-			irrIdx--;
 		}
 	}
 
@@ -96,6 +103,7 @@ public class Lattice {
 			this.prevMaxNode = null;
 			this.prevMaxScore = Double.NEGATIVE_INFINITY;
 			this.getMaxTransitionIdxFromPrevNodes(prevLatticeNodes,irregularNode.getFirstPosId());
+
 			if(this.prevMaxNode != null){
 				List<Pair<String,Integer>> irregularTokens = irregularNode.getTokens();
 				//불규칙확장을 위한 노드 추가
@@ -115,7 +123,7 @@ public class Lattice {
 
 		//첫번쨰 토큰에 대한 처리
 		if(morphPosIdList.size() == 0){
-			LatticeNode firstNode = this.makeNode(beginIdx, endIdx, morphPosIdList.get(0).getFirst(), "IRR", IRREGULAR_POS_ID, prevMaxScore, prevMaxIdx);
+			LatticeNode firstNode = this.makeNode(beginIdx, endIdx, morphPosIdList.get(0).getFirst(), SYMBOL.IRREGULAR, IRREGULAR_POS_ID, prevMaxScore, prevMaxIdx);
 			this.appendNode(firstNode);
 		}
 		else{
@@ -136,7 +144,7 @@ public class Lattice {
 			if(i == morphPosIdList.size()-1){
 				//					this.put(irrIdx, endIdx, morphPosId.getFirst(), "IRR", morphPosId.getSecond(), 0.0);
 				//				LatticeNode latticeNode = new LatticeNode(irrIdx, endIdx,new MorphTag(morphPosId.getFirst(),"IRR", IRREGULAR_POS_ID),0.0);
-				LatticeNode latticeNode = this.makeNode(irrIdx, endIdx, morphPosId.getFirst(), "IRR", IRREGULAR_POS_ID, 0.0, 0);
+				LatticeNode latticeNode = this.makeNode(irrIdx, endIdx, morphPosId.getFirst(), SYMBOL.IRREGULAR, IRREGULAR_POS_ID, 0.0, 0);
 				this.appendNode(latticeNode);
 
 			}
@@ -184,67 +192,55 @@ public class Lattice {
 	}
 
 	public boolean put(int beginIdx, int endIdx, String morph, String tag, int tagId, double score) {
+
+		boolean isInserted = false;
+
 		List<LatticeNode> prevLatticeNodes = this.getNodeList(beginIdx);
 
 		if(prevLatticeNodes == null){
-			return false;
+			//			return false;
 		}else{
-			this.prevMaxIdx = -1;
-			this.prevMaxNode = null;
-			//prevMaxScore는 이전 노드까지의 누적된 score와 현재 노드 사이의 전이확률 값이 계산된 결과임
-			this.prevMaxScore = Double.NEGATIVE_INFINITY;
-			//			이전 node list에 포함된 node 중 현재 node와 연결 시 값을 최대로 하는 node의 인덱스를 찾음
-			this.getMaxTransitionInfoFromPrevNodes(prevLatticeNodes,tagId,morph);
+			//			this.prevMaxIdx = -1;
+			//			this.prevMaxNode = null;
+			//			//prevMaxScore는 이전 노드까지의 누적된 score와 현재 노드 사이의 전이확률 값이 계산된 결과임
+			//			this.prevMaxScore = Double.NEGATIVE_INFINITY;
+			//이전 node list에 포함된 node 중 현재 node와 연결 시 값을 최대로 하는 node의 인덱스를 찾음
+			//			this.getMaxTransitionInfoFromPrevNodes(prevLatticeNodes,tagId,morph);
+			LatticeNode latticeNode = this.getMaxTransitionNodeFromPrevNodes(prevLatticeNodes,beginIdx,endIdx,morph,tag,tagId,score);
 
-			//연결 가능한 노드가 있다면
-			if(this.prevMaxNode != null){
-				LatticeNode latticeNode = this.makeNode(beginIdx,endIdx,morph,tag,tagId,this.prevMaxScore+score,this.prevMaxIdx);
+			if(latticeNode != null){
 				this.appendNode(latticeNode);
 				return true;
 			}
-			return false;
 		}
-	}
-
-	private LatticeNode makeNode(int beginIdx, int endIdx, String morph,
-			String tag, int tagId, double score, int prevLatticeIdx) {
-		LatticeNode latticeNode = new LatticeNode(beginIdx, endIdx, new MorphTag(morph, tag, tagId), score);
-		latticeNode.setPrevNodeIdx(prevLatticeIdx);
-		return latticeNode;
-	}
-
-	public void appendNode(LatticeNode latticeNode) {
-		List<LatticeNode> latticeNodeList = this.getNodeList(latticeNode.getEndIdx());
-		if(latticeNodeList == null){
-			latticeNodeList = new ArrayList<>();
+		if(!isInserted){
+			//			this.makeNode(beginIdx, endIdx, "NA", SYMBOL.NA, this.posTable.getId(SYMBOL.NA), SCORE.NA, prevLatticeIdx)
 		}
-		latticeNodeList.add(latticeNode);
-		this.lattice.put(latticeNode.getEndIdx(), latticeNodeList);
-	}
-	public List<LatticeNode> getNodeList(int index){
-		return this.lattice.get(index);
+		return false;
 	}
 
-	private void getMaxTransitionIdxFromPrevNodes(List<LatticeNode> prevLatticeNodeSet, int tagId) {
-		this.getMaxTransitionInfoFromPrevNodes(prevLatticeNodeSet, tagId, null);
-	}
+	private LatticeNode getMaxTransitionNodeFromPrevNodes(
+			List<LatticeNode> prevLatticeNodes, int beginIdx, int endIdx,
+			String morph, String tag, int tagId, double score) {
 
-	private void getMaxTransitionInfoFromPrevNodes(List<LatticeNode> prevLatticeNodeSet, int tagId, String morph) {
-
-		for(int i=0; i<prevLatticeNodeSet.size(); i++){
-
+		double prevMaxScore = Double.NEGATIVE_INFINITY;
+		LatticeNode prevMaxNode = null;
+		int latticeNodeIdx = -1;
+		int prevLatticeNodeIdx = -1;
+		for (LatticeNode prevLatticeNode : prevLatticeNodes) {
+			latticeNodeIdx++;
 			//불규칙인경우
-			if(prevLatticeNodeSet.get(i).getMorphTag().getTagId() == -1){
+			if(prevLatticeNode.getMorphTag().getTagId() == -1){
 				continue;
 			}
 			int prevTagId;
 			String prevMorph;
-			if(prevLatticeNodeSet.get(i).getMorphTag().getTag().equals(SYMBOL.END)){
+			if(prevLatticeNode.getMorphTag().getTag().equals(SYMBOL.END)){
 				prevTagId = this.getPosTable().getId(SYMBOL.START);
 				prevMorph = SYMBOL.START;
 			}else{
-				prevTagId = prevLatticeNodeSet.get(i).getMorphTag().getTagId();
-				prevMorph = prevLatticeNodeSet.get(i).getMorphTag().getMorph();
+				prevTagId = prevLatticeNode.getMorphTag().getTagId();
+				prevMorph = prevLatticeNode.getMorphTag().getMorph();
 			}
 			//전이 확률 값 가져옴
 			Double transitionScore = this.transition.get(prevTagId, tagId);
@@ -276,12 +272,98 @@ public class Lattice {
 				}
 			}
 
-			double prevObservationScore = prevLatticeNodeSet.get(i).getScore();
+			double prevObservationScore = prevLatticeNode.getScore();
+
+			if(prevMaxScore < transitionScore+prevObservationScore){
+				prevMaxScore = transitionScore+prevObservationScore;
+				prevMaxNode = prevLatticeNode;
+				prevLatticeNodeIdx = latticeNodeIdx;
+			}
+		}
+		if(prevMaxNode != null){
+			return this.makeNode(beginIdx,endIdx,morph,tag,tagId,prevMaxScore+score,prevLatticeNodeIdx);
+		}
+		return null;
+	}
+
+	public LatticeNode makeNode(int beginIdx, int endIdx, String morph,
+			String tag, int tagId, double score, int prevNodeHash) {
+		LatticeNode latticeNode = new LatticeNode(beginIdx, endIdx, new MorphTag(morph, tag, tagId), score);
+		latticeNode.setPrevNodeIdx(prevNodeHash);
+		return latticeNode;
+	}
+
+	public int appendNode(LatticeNode latticeNode) {
+		List<LatticeNode> latticeNodeList = this.getNodeList(latticeNode.getEndIdx());
+		if(latticeNodeList == null){
+			latticeNodeList = new ArrayList<>();
+		}
+		latticeNodeList.add(latticeNode);
+		this.lattice.put(latticeNode.getEndIdx(), latticeNodeList);
+		return latticeNodeList.size()-1;
+	}
+	public List<LatticeNode> getNodeList(int index){
+		return this.lattice.get(index);
+	}
+
+	private void getMaxTransitionIdxFromPrevNodes(List<LatticeNode> prevLatticeNodes, int tagId) {
+		this.getMaxTransitionInfoFromPrevNodes(prevLatticeNodes, tagId, null);
+	}
+
+	private void getMaxTransitionInfoFromPrevNodes(List<LatticeNode> prevLatticeNodes, int tagId, String morph) {
+
+		int prevMaxNodeIdx = -1;
+		for (LatticeNode prevLatticeNode : prevLatticeNodes) {
+			prevMaxNodeIdx++;
+			//불규칙인경우
+			if(prevLatticeNode.getMorphTag().getTagId() == -1){
+				continue;
+			}
+			int prevTagId;
+			String prevMorph;
+			if(prevLatticeNode.getMorphTag().getTag().equals(SYMBOL.END)){
+				prevTagId = this.getPosTable().getId(SYMBOL.START);
+				prevMorph = SYMBOL.START;
+			}else{
+				prevTagId = prevLatticeNode.getMorphTag().getTagId();
+				prevMorph = prevLatticeNode.getMorphTag().getMorph();
+			}
+			//전이 확률 값 가져옴
+			Double transitionScore = this.transition.get(prevTagId, tagId);
+			if(transitionScore == null){
+				continue;
+			}
+
+			//자소 결합규칙 체크
+			if(tagId == this.posTable.getId(SYMBOL.JKO)){
+				if(this.hasJongsung(prevMorph)){
+					if(morph.charAt(0) != 'ㅇ'){
+						continue;
+					}
+				}else{
+					if(morph.charAt(0) == 'ㅇ'){
+						continue;
+					}
+				}
+			}else if(tagId == this.posTable.getId(SYMBOL.JKS)
+					|| tagId == this.posTable.getId(SYMBOL.JKC)){
+				if(this.hasJongsung(prevMorph)){
+					if(morph.charAt(0) == 'ㄱ' && morph.charAt(1) == 'ㅏ'){
+						continue;
+					}
+				}else{
+					if(morph.charAt(0) == 'ㅇ' && morph.charAt(1) == 'ㅣ'){
+						continue;
+					}
+				}
+			}
+
+			double prevObservationScore = prevLatticeNode.getScore();
 
 			if(this.prevMaxScore < transitionScore+prevObservationScore){
 				this.prevMaxScore = transitionScore+prevObservationScore;
-				this.prevMaxNode = prevLatticeNodeSet.get(i);
-				this.prevMaxIdx = i;
+				this.prevMaxNode = prevLatticeNode;
+				this.prevMaxIdx = prevMaxNodeIdx;
 			}
 		}
 	}
@@ -321,6 +403,7 @@ public class Lattice {
 			if(nodeList == null){
 				continue;
 			}
+
 			for (LatticeNode latticeNode : nodeList) {
 				System.out.println(latticeNode);
 			}
@@ -340,8 +423,8 @@ public class Lattice {
 		return this.put(this.lastIdx, this.lastIdx+1, SYMBOL.END, SYMBOL.END, this.getPosTable().getId(SYMBOL.END), 0);
 	}
 
-	public List<Pair<String,String>> findPath() {
-		List<Pair<String,String>> shortestPathList = new ArrayList<>();
+	public List<LatticeNode> findPath() {
+		List<LatticeNode> shortestPathList = new ArrayList<>();
 		int idx = this.getLastIdx()+1;
 		//마지막 연결 노드가 없는 경우에는 null 반환
 		if(this.lattice.containsKey(idx) == false){
@@ -349,17 +432,26 @@ public class Lattice {
 		}
 
 		LatticeNode latticeNode = this.lattice.get(idx).get(0);
-
+		
+		int prevLatticeEndIndex = latticeNode.getEndIdx();
 		while(true){
 			latticeNode = this.lattice.get(latticeNode.getBeginIdx()).get(latticeNode.getPrevNodeIdx());
-			shortestPathList.add(new Pair<>(this.unitParser.combine(latticeNode.getMorphTag().getMorph()),latticeNode.getMorphTag().getTag()));
-
+			//			shortestPathList.add(new Pair<>(this.unitParser.combine(latticeNode.getMorphTag().getMorph()),latticeNode.getMorphTag().getTag()));
+//			latticeNode.setMorph(this.unitParser.combine(latticeNode.getMorphTag().getMorph()));
+			latticeNode.setMorph(latticeNode.getMorphTag().getMorph());
+			if(latticeNode.getEndIdx() < 0){
+				latticeNode.setEndIdx(prevLatticeEndIndex);
+			}
+			shortestPathList.add(latticeNode);
+			prevLatticeEndIndex = latticeNode.getEndIdx();
 			if(latticeNode.getBeginIdx() == 0){
 				break;
 			}
 		}
+
 		return shortestPathList;
 	}
+
 
 	private void putIrregularTokens(int beginIdx, int endIdx, List<Pair<String,Integer>> morphPosIdList){
 
